--- a/index.html
+++ b/index.html
@@ -1,13 +1,228 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
+<html class="no-js" lang="en">
+
+<head>
+    <title>Alahee | প্রয়োজনের সব</title>
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#931600" />
+    <meta name="author" content="alahee.com" />
+    <meta name="copyright" content="alahee.com" />
+    <meta name="owner" content="alahee.com" />
+    <meta name="url" content="https://alahee.com" />
+    <meta name="identifier-URL" content="https://alahee.com" />
+    <meta name="contact" content="000-000 000" />
+
+    <meta name="Description" content="Online shopping center in Bangladesh. All kinds of products available here in alahee.com" />
+    <meta name="keywords" content="Alahee, alahee.com, Online Shop, Store, Online Store, Online Shopping, Shopping, Bangladesh, best ecommerce multi-vendor website, local product" />
+    <meta name="subject" content="Online shopping center in Bangladesh. All kinds of products available here in alahee.com." />
+
+    <meta name="googlebot" content="index, follow" />
+    <meta name="coverage" content="Bangladesh" />
+    <meta name="distribution" content="Bangladesh" />
+    <meta name="target" content="all" />
+    <meta name="HandheldFriendly" content="True" />
+    <meta name="MobileOptimized" content="320" />
+    <meta name="google-site-verification" content="tWJAmR96EyGwVqz-7ZNjMYwuCkpd8bGOqI4in2zSMlk" />
+
+    <meta http-equiv="x-dns-prefetch-control" content="on" />
+    <meta http-equiv="content-language" content="en_US" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://alahee.com/" />
+    <meta property="twitter:title" content="Alahee | প্রয়োজনের সব" />
+    <meta property="twitter:image" content="https://admin.alahee.com/upload/company/alahee.com_6.png" />
+    <meta property="twitter:description" content="Online shopping center in Bangladesh. All kinds of products available here in alahee.com" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="fb:app_id" content="542825373971492" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Alahee | প্রয়োজনের সব" />
+    <meta property="og:site_name" content="Alahee" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:description" content="Online shopping center in Bangladesh. All kinds of products are available here in alahee.com" />
+    <meta property="og:url" content="https://alahee.com/" />
+    <meta property="og:image" content="https://admin.alahee.com/upload/company/alahee.com_6.png" />
+
+    <!-- Test -->
+    <!-- <meta property="og:url" content="https://www.somoyerkonthosor.com/post/2023/05/23/646bb43244b8b" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="পল্লী সঞ্চয় ব্যাংকের ৬৬ লাখ টাকা আত্মসাৎ" />
+    <meta property="og:image" content="https://www.somoyerkonthosor.com/share-artical-media-image/7219?random=646c353789a1d&amp;advertisment=true&amp;category_id=222" /> -->
+
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+    <link rel="alternate" href="alahee.com" hreflang="en_US" />
+    <link rel="preload" as="image" type="image/x-icon" href="/image/logo-bn.png" />
+    <link rel="preload" as="image" type="image/x-icon" href="/image/logo-bn.png" />
+    <link rel="preload" as="style" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto" />
+    <link rel="dns-prefetch" href="https://alahee.com" />
+</head>
+
+<body>
+
+    <!-- facebook sdk -->
+    <div id="fb-root"></div>
+    <div class="fb-customerchat" attribution="setup_tool" page_id="100803898984613" theme_color="#009345" minimized="true"></div>
     <div id="root"></div>
+
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v15.0&appId=542825373971492&autoLogAppEvents=1" nonce="EOnpmbIF">
+    </script>
+
+    <script>
+        (function(d, s, id) {
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v3.0";
+            fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
+    </script>
+
+    <!-- usha chatbot start -->
+    <!-- <div id="__usha__chatbot__mounter__"></div>
+        <script> window.USHA_AGENT_KEY = "1S0XTnKKtDqWDYlcsefH";</script>
+        <script async defer src="https://usha.ulkabd.com/usha-chatbot.styles.min.js"></script>
+        <script async defer src="https://usha.ulkabd.com/usha-chatbot.min.js"></script> -->
+    <!-- usha chatbot end -->
+    <script>
+        window.fbAsyncInit = function() {
+            FB.init({
+                appId: "542825373971492",
+                autoLogAppEvents: true,
+                xfbml: true,
+                version: "v8.0",
+            });
+        };
+
+        FB.CustomerChat.update({
+            logged_in_greeting: 'Welcome to Alahee',
+            logged_out_greeting: 'Log in to Chat with Us',
+            ref: 'alahee',
+        });
+
+        (function(d, s, id) {
+            var js,
+                fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) return;
+            js = d.createElement(s);
+            js.id = id;
+            js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1';
+            fjs.parentNode.insertBefore(js, fjs);
+        })(document, "script", "facebook-jssdk");
+    </script>
+    <!-- facebook sdk  -->
+
+    <!-- Facebook Pixel Code -->
+    <script>
+        !(function(f, b, e, v, n, t, s) {
+            if (f.fbq) return;
+            n = f.fbq = function() {
+                n.callMethod ?
+                    n.callMethod.apply(n, arguments) :
+                    n.queue.push(arguments);
+            };
+            if (!f._fbq) f._fbq = n;
+            n.push = n;
+            n.loaded = !0;
+            n.version = "2.0";
+            n.queue = [];
+            t = b.createElement(e);
+            t.async = !0;
+            t.src = v;
+            s = b.getElementsByTagName(e)[0];
+            s.parentNode.insertBefore(t, s);
+        })(
+            window,
+            document,
+            "script",
+            "https://connect.facebook.net/en_US/fbevents.js"
+        );
+        fbq("init", "100803898984613");
+        fbq("track", "PageView");
+    </script>
+    <noscript>
+    <img height="1" width="1" style="display: none;"
+      src="https://www.facebook.com/tr?id=100803898984613&ev=PageView&noscript=1" />
+  </noscript>
+    <!-- End Facebook Pixel Code -->
+
+    <!-- right click disabled -->
+    <!-- <script type="text/javascript">
+    document.addEventListener("contextmenu", (event) =>
+      event.preventDefault()
+    );
+  </script> -->
+    <!-- right click disabled -->
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PRJ9HDV" height="0" width="0"
+      style="display: none; visibility: hidden;"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Google Analytics -->
+    <script>
+        window.ga =
+            window.ga ||
+            function() {
+                (ga.q = ga.q || []).push(arguments);
+            };
+        ga.l = +new Date();
+        ga("create", "UA-158123167-1", "auto");
+        ga("send", "pageview");
+    </script>
+    <script async src="https://www.google-analytics.com/analytics.js"></script>
+    <!-- End Google Analytics -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158123167-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+        gtag("config", "UA-158123167-1");
+    </script>
+    <!-- End Global site tag (gtag.js) - Google Analytics -->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158123167-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+        gtag("config", "UA-158123167-1");
+    </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+
+    <!-- Google Tag Manager -->
+    <script>
+        (function(w, d, s, l, i) {
+            w[l] = w[l] || [];
+            w[l].push({
+                "gtm.start": new Date().getTime(),
+                event: "gtm.js"
+            });
+            var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s),
+                dl = l != "dataLayer" ? "&l=" + l : "";
+            j.async = true;
+            j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+            f.parentNode.insertBefore(j, f);
+        })(window, document, "script", "dataLayer", "GTM-PRJ9HDV");
+    </script>
+    <!-- End Google Tag Manager -->
+
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
