--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,6 @@
     <title>Alahee | প্রয়োজনের সব</title>
 
     <meta charset="utf-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#931600" />
     <meta name="author" content="alahee.com" />
@@ -30,15 +29,21 @@
     <meta http-equiv="content-language" content="en_US" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
+    <meta property="fb:app_id" content="2187526391389667" />
+    <!-- <meta property="og:type" content="website" />
     <meta property="og:title" content="Alahee | প্রয়োজনের সব" />
     <meta property="og:site_name" content="Alahee" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:description" content="Online shopping center in Bangladesh. All kinds of products are available here in alahee.com" />
-    <!-- <meta property="og:url" content="https://alahee.com/" /> -->
-    <!-- <meta property="og:image" content="https://admin.alahee.com/upload/company/alahee.com_6.png" /> -->
+    <meta property="og:url" content="https://alahee.com/" />
+    <meta property="og:image" content="https://admin.alahee.com/upload/company/alahee.com_6.png" /> -->
 
-    <!-- Twitter -->
+    <!-- Test -->
+    <meta property="og:url" content="https://www.somoyerkonthosor.com/post/2023/05/23/646bb43244b8b" />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="পল্লী সঞ্চয় ব্যাংকের ৬৬ লাখ টাকা আত্মসাৎ" />
+
+    <meta property="og:image" content=https://www.somoyerkonthosor.com/share-artical-media-image/7219?random=646c353789a1d&amp;advertisment=true&amp;category_id=222 " />" <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://alahee.com/" />
     <meta property="twitter:title" content="Alahee | প্রয়োজনের সব" />
@@ -47,14 +52,13 @@
 
     <meta name="google-site-verification" content="tWJAmR96EyGwVqz-7ZNjMYwuCkpd8bGOqI4in2zSMlk" />
 
-    <link rel="shortcut icon" type="image/ico" href="/favicon_.ico" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <link rel="alternate" href="alahee.com" hreflang="en_US" />
     <link rel="preload" as="image" type="image/x-icon" href="/image/logo-bn.png" />
     <link rel="preload" as="image" type="image/x-icon" href="/image/logo-bn.png" />
     <link rel="preload" as="style" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto" />
-
     <link rel="dns-prefetch" href="https://alahee.com" />
-
 </head>
 
 <body>
@@ -217,6 +221,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <script type="module" src="/src/main.jsx"></script>
 </body>
 
 </html>
