ssr in progress

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     </script>
     <!-- End Google Tag Manager -->
 
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
 </body>
 
 </html>
